fixing layout bugs arising from keeping the article-layout #container

--- a/views/splash.sass
+++ b/views/splash.sass
@@ -1,7 +1,7 @@
 #splash
 	float: right
-	padding-left: 5em
-	padding-right: 10em
+	padding-right: 25%
+	padding-top: 5%
 
 	ul
 		list-style-type: none
@@ -12,7 +12,7 @@
 		border: none
 
 header[role=banner]
-	margin-left: -10em
+	margin-left: 10%
 	h1
 		font-size: 654%
 	h2
